--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,13 @@
+<!-- public/index.html -->
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Bus Booking App</title>
-  <link href="/dist/output.css" rel="stylesheet">
-  <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
-</head>
-<body class="bg-gray-50">
-  <div id="root"></div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Bus Booking</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
